--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <section class="menu">
         <header class="menu__header">
             <img src="assets\vector.png">
-            <h3 class="menu__title">Fulana de Tal</h3>
+            <h3 class="menu__title">Luis Gúzman</h3>
         </header>
         <nav>
             <ul class="menu__list">
@@ -27,9 +27,9 @@
                 <li class="menu__list__item"><a href="#hobbies">Hobbies</a></li>
                 <li class="menu__list__item"><a href="#formacion">Formación</a></li>
                 <li class="menu__list__item"><a href="#xp">Proyectos</a></li>
-                <li class="menu__list__item"><a href="#contacto">Contacto@fulana.com</a></li>
+                <li class="menu__list__item"><a href="#contacto"><strong>Contacto@fulana.com</strong></a></li>
             </ul>
-            <li class="menu__list__item__contato"><a href="#contacto">contacto@fulana.com</a></li>
+        
         </nav>
     </section>
 
