--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <section class="menu">
         <header class="menu__header">
             <img src="assets\vector.png">
-            <h3 class="menu__title">Luis Gúzman</h3>
+            <h3 class="menu__title">@SoyL23</h3>
         </header>
         <nav>
             <ul class="menu__list">
@@ -27,7 +27,7 @@
                 <li class="menu__list__item"><a href="#hobbies">Hobbies</a></li>
                 <li class="menu__list__item"><a href="#formacion">Formación</a></li>
                 <li class="menu__list__item"><a href="#xp">Proyectos</a></li>
-                <li class="menu__list__item"><a href="#contacto"><strong>Contacto@fulana.com</strong></a></li>
+                <li class="menu__list__item"><a href="#contacto"><strong>LuisGuzman_12@hotmail.com</strong></a></li>
             </ul>
         
         </nav>
@@ -206,7 +206,7 @@
             </div>
         </div>  
 
-        <div class="experiencie__box">
+        <div class="experiencie__box__reverse">
             <!-- Pon el logotipo/captura de pantalla de tu proyecto -->
             <img class="experience__img" src="assets\forca_print.png">
             <div class="experience__info"
@@ -234,7 +234,7 @@
             </div>
         </div>  
 
-        <div class="experience__box">
+        <div class="experiencie__box__reverse">
             <img class="experience__img" src="assets\forca2_print.png">
             <div class="experience__info-container"
             <h2 class="experience__title">Juego creado con HTML, CSS y JavaScript</h2>
@@ -244,7 +244,7 @@
                             <span class="experience__repo"><a href="https://github.com/alura-challenges/challenge-one-juego-ahorcado"><button class="experiencia__botao--repo">Repositório</button></a></span>
                             <span class="experience__demo"><a href=""><button class="experience__botao--demo">Ver demo</button></a></span>
                     </div>
-        </div>
+            </div>
         </div>  
 
         <!-- Sección de Contacto -->
