Commit correccion de bordes contacto

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                     </div>
             </div>
         </div>  
-
+    </section>
         <!-- Sección de Contacto -->
         <section class="formcontato" id="contacto">
             <div  class="formcontato__contacto">
@@ -272,8 +272,8 @@
         <!-- Sección de Footer -->
         <section class="footer">
             <div class="footer__rodape">
-                <p>Desarrollado por Fulana de Tal</p>
-                <p>2022</p>
+                <p>Desarrollado por SoyL23</p>
+                <p>Julio, 2023</p>
             </div>
         </section>
     </div>
